Archive2/4c/19105de2b3d597/output
main.cpp: In function 'int main()':
main.cpp:16:16: error: too few arguments to function
     sum(val,4,7);
                ^
